feat: 优先使用zgc